[project]
name = "pet-drilly"
version = "0.1.0"
description = "Recruit Drilly from Garn47 as your desktop pet"
authors = [
    {name = "Anna Antonenko",email = "portasynthinca3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playsound3 (>=3.2.3,<4.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "psutil (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
